week 2 webclone 2nd commit

--- a/cloneIndex.html
+++ b/cloneIndex.html
@@ -7,48 +7,30 @@
     <link rel="stylesheet" href="cloneStyle.css" />
     <link href="http://fonts.cdnfonts.com/css/tf2" rel="stylesheet">
     <title>Team Fortress 2 - Comics</title>
-  </head>
-  <body>
-    <div id="navBarBackground">
-      <div id="navBarBG">
-        <div id="navBar">
-          <a class="navBarLink"
-            ><img
-              class="bottom"
-              src="https://steamcdn-a.akamaihd.net/apps/tfstore/images/header/en_teamfortress.png"
-          /></a>
-          <a class="navBarLink"
-            ><img
-              class="bottom"
-              src="https://steamcdn-a.akamaihd.net/apps/tfstore/images/header/en_workshop.png"
-          /></a>
-          <a class="navBarLink"
-            ><img
-              class="bottom"
-              src="https://steamcdn-a.akamaihd.net/apps/tfstore/images/header/en_wiki.png"
-          /></a>
-          <a class="navBarLink"
-            ><img
-              class="bottom"
-              src="https://steamcdn-a.akamaihd.net/apps/tfstore/images/header/en_community.png"
-          /></a>
-        </div>
-      </div>
+</head>
+<body>
+    <div id="navBarBackground navBarBG navBar">
+        <a class="navBarLink">
+        <img class="bottom" src="https://steamcdn-a.akamaihd.net/apps/tfstore/images/header/en_teamfortress.png"/></a>
+        <a class="navBarLink">
+        <img class="bottom" src="https://steamcdn-a.akamaihd.net/apps/tfstore/images/header/en_workshop.png"/></a>
+        <a class="navBarLink">
+        <img class="bottom" src="https://steamcdn-a.akamaihd.net/apps/tfstore/images/header/en_wiki.png"/></a>
+        <a class="navBarLink">
+        <img class="bottom" src="https://steamcdn-a.akamaihd.net/apps/tfstore/images/header/en_community.png"/></a>
     </div>
 
     <div id="mainPage">
-        <div id="column">
-            <div id="comicsHeader">
-                <div id="comicsHeaderImg">
-                    <ul>
-                        <li>Home</li>
-                        <li>Movies</li>
-                        <li>Comics</li>
-                        <li>History</li>
-                        <li>Artwork</li>
-                    </ul>
-                </div>
-            </div>
+        <div id="comicsHeader">
+            <ul>
+                <li>Home</li>
+                <li>Movies</li>
+                <li>Comics</li>
+                <li>History</li>
+                <li>Artwork</li>
+            </ul>
+        </div>
+        
         <div id="columnContent">
             <div id="blurbImg"><img src='saxton-hale.png'>
             </div>
@@ -104,5 +86,5 @@
         </div>
         </div>
     </div>
-  </body>
+</body>
 </html>
